Fixing tile editor and blurriness in Microsoft Edge (#6317)

--- a/theme/image-editor/imageEditor.less
+++ b/theme/image-editor/imageEditor.less
@@ -217,6 +217,12 @@
     background-color: darken(#4b7bec, 10%);
 }
 
+.image-editor.editing-tile {
+    .image-editor-content, .image-editor-topbar, .image-editor-bottombar {
+        display: none;
+    }
+}
+
 :root {
     --editor-height: 31rem;
 }
